// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button-block 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: block;
  width: 100%;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

<button
  class="c0 c1"
  type="button"
>
  hello
</button>
`;

exports[`Button-disabled 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: inline-block;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

<button
  class="c0 c1"
  disabled=""
  type="button"
>
  hello
</button>
`;

exports[`Button-isLoading 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: inline-block;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
  background-image: url(data:image/gif;base64,R0lGODlhIAAgAPMLABISElJSUnFxcV9fXyEhITU1NYaGho2NjXR0dHt7ewICAp6engAAAAAAAAAAAAAAACH/C05FVFNDQVBFMi4wAwEAAAAh+QQFCgALACwAAAAAIAAgAEAE5nDJSelQo+oqCMlTAQCBdgjTgQisIQVwDG/0wt4Cckin4E6Jlo0lue1qlREAJVE4JysfcjLwMKeLH9YgxEZzx1o0fKMEr1NBieJUmInYCWG0bhdZYVrB4ylokTg6cYNDgXmEFX8aZywIU1wpX4oVUT9lEpWEB4orjohTAAoAiYc1ByMFbE88jYQBIwQTdlmtiAJKO3ZcAgkUu2FVfUwJACA1jLwaAnt8cbuTJmufFQkDMjOEODcI1dfS04+Dz6ZfnljIvRO7YBMCpbvpEgYrpRQ9TJe75s61hSmXcVjE8+erniZBcSIAACH5BAUKAAsALAAAAAAYABcAAARycMlJKxA160kAqcGwiRRgUoSiaMRXntKgAmyLTCYtAWqgDa0CDhaYbRaFFim3MKgUpE3LxSyoXM1A4IbCUmSJCUKrNUgMBMyRIiCHDuuNwe2Lb8aBsP2o3vvjBwgCg4R/C4KEhX+BiYOGj5CRkpNHensRACH5BAUKAAsALAEAAAAdAA4AAARycMlJpyA1670KKZnATQZSEShVAMAoBYE4oZgksPUIB8acSgSWS4LY+XK4oWQAMy1oiwMLIJscNgbjMxVggSYBhWJwECB6E2ZM01oCxAqeYI64RgOJUYIAV9QSc3N5Sn1UFAcIgU4uYXFYc2hDBZFYShwRACH5BAUKAAsALAcAAAAZABEAAARpcMm5Ukg06z3CyN+2HEYWnBlBiIKATWdAqeLSCgeMSoUaaoYWQidbDFSF2gLRKi1iEtVKebhJoAtaBgAQUBJNjYDgHHMBYmetcAYklZv2lOKFG7l2eCCX7/s1CoGCAD99gocKfwuICoQRACH5BAUKAAsALA4AAAASABgAAARl0Ayzqr1YDLwQ5csgXkMQgOFYGeYJilvVIihcIS2axu33jgJTrDIgEFCJwMFSMBKGIIrzqKtMC7Sq9anter8VgHhM1Y3PgCoaQBCAvQFfN6BQuLr1OgCKJOQVZVUDAHl3WnQKbhEAIfkEBQoACwAsDgAAABIAHgAABIDwoLOqvRgJhBO+QggOw1eFwkWmJmoJpNeKS0KW5uIud36KtgGrgggEDCbD0GA0cnyHQTOA802PPkvCmcUMu+AsYUwufD/kNEGsLoTfFsp7AADA63XCOVnAA9wmAQoyAgR4JgUKCmsXhiYHigpVXYIKdm8AigFvApFwBIpyYVQmEQAh+QQFCgALACwPAAEAEQAfAAAEe3DJucyhGCchsj8c4mUIZ4yUEaIUJ1xsxSUpB1P3cpQmu7k0lEuAyHlUglNMolw6PYGodBCESq+oa5T67DoFBMLAGQ4XnmXCaACgFMpjSgAAOE/G6oViL6EDOh57ChN0eRmCEwR0I4iEi4d8EwWPGI0tHgAKbU4DCnFLEQAh+QQFCgALACwIAA4AGAASAAAEbHDJSesSOKNj+8wg4nkgto1oigoqmgSB2FpwbczUMdTBMAuE28LAky0SikCHQKggYMIFQaEoLABYCbM5GlAVHCxAMmBaPQCq8pqVFJg+GnUsEVO2nbQizqZPmB1UXHVtE3wVOxUEAIM4H34qEQAh+QQFCgALACwCABIAHQAOAAAEeHDJSatd5lJTtDWCkF2BogQehYQCclACYJoplbBCIhGzQuieROC1OKxChpIJMJAYmBZBINCcGFaHgQk1KQAAKIJYMg2MLMRJ7LsbLxDl2oTAbhMmgylCvvje7VZxNXQAAnNuEnlcKV8dh38TCGcehhUFBI58cpA1EQAh+QQFCgALACwAAA8AGQARAAAEZ3AAReu6OOtbu9pgJnlfaJ7oeQQpCgBDCxLvK2dFDRSoIWw1wu8i3PgEiYzApiEQLoHoRUA9oJzPRZS1OCJOBWdMK70gqIbQwMmDlhcH6nCWdXMvCWrIqdlqDFZqGgMBYzcaCQFJGxEAIfkEBQoACwAsAQAIABEAGAAABFxQKBWWvfiGqcDI4EJwCpGE2ACQaLZRbWZUcW3feK7v6EAQNkTh96sRgYaW71e4HAIn0O9zGQQCgoVgi5pdLdts6BpAgLkgBPkSHl+TZ7ELi2mDDHILQmC+HRAHEQAh+QQFCgALACwAAAIADgAdAAAEcnDJuUageCpFMt6K4E3BBowTsF3oABppRxFbkQIAIS6JwkoFHK4A8wgIwhNqgRssF4fnUlAgWK+Zq1ZGoW650vAOhQgEEiODee2xrAdRTNk8QEsE8YU6gKAkBAJFHgeAYx4IgIIZBoB9ZIB5RgJ2KAeKEQA7);
  background-position: center;
  background-size: 16px;
  background-repeat: no-repeat;
  color: rgba(0,0,0,0);
}

<button
  class="c0 c1"
  type="button"
>
  hello
</button>
`;

exports[`Button-size-large 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: inline-block;
  padding: 0.75em 1em;
  font-size: 16px;
  font-weight: 700;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

<button
  class="c0 c1"
  type="button"
>
  hello
</button>
`;

exports[`Button-size-xlarge 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: inline-block;
  padding: 0.9em 1em;
  font-size: 18px;
  font-weight: 700;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

<button
  class="c0 c1"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-default 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: inline-block;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

<button
  class="c0 c1"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-link 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: inline-block;
  border: none;
  padding: 0;
  color: rgba(242,103,34,1);
}

.c0:active {
  box-shadow: none;
  color: #a43d0a;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: none;
  color: rgba(242,103,34,0.7);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
  class="c0 c1"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-outline 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: inline-block;
  color: rgba(242,103,34,1);
  border-color: rgba(242,103,34,1);
}

<button
  class="c0 c1"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-primary 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: inline-block;
  background-color: rgba(242,103,34,1);
  border-color: rgba(242,103,34,1);
  color: white;
}

<button
  class="c0 c1"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-secondary 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
}

.c1:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c1:hover:enabled,
.c1:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c1:active:enabled {
  box-shadow: none;
}

.c0 {
  display: inline-block;
  background-color: rgba(250,162,27,1);
  border-color: rgba(250,162,27,1);
  color: white;
}

<button
  class="c0 c1"
  type="button"
>
  hello
</button>
`;
